--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ author :
   email : soberstadt@gmail.com
   github : soberstadt
   twitter : soberstadt
+  googleplus : 114754196444501299267
   # feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
